# RR_Bots

./: .gitignore  README.md  RR_comment_bot_v3.py  data_file.json  file.py  file_creation.py  global-setup.ts  novels_info.txt  package-lock.json  package.json  page.html  playwright.config.ts  pyproject.toml  rr_pdf_bot.py  test.py  test2.py  tsconfig.json
botLogic/: leaveComment.ts  needToLeaveComment.ts
bots/: comment_bot_v3.py  horizon-of-war-military-romance-kingdom-building  login.py  novel_scrapper.py  novels_info.txt  test.py
db/: novels_info.json  novels_info.txt  novels_info1.json
html/: page.html
legacy/: comment_bot_v2.py  comment_bot_v3.py  login.py
playwright/: bun.lockb  ex2.json  example.json  global-setup.ts  indes.js  package-lock.json  package.json  playwright.config.ts
playwright/botLogic/: getDataFromMyFollowList.ts  getLinks.ts  isFirstPage.ts  needToLeaveComment.ts
playwright/data/: ex2.json  fictions.json
playwright/playwright-report/: index.html
playwright/scripts/: auth.setup.ts  commentBot.script.ts  res.ts  temp.script.ts  temp2.script.ts  test-1.spec.ts
playwright/utils/: constants.ts  helpers.ts  types.ts
scripts/: auth.setup.ts  commentBot.script.ts
utils/: constants.ts  helpers.ts  types.ts
